--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script type="text/javascript">
-        const app = document.getElementById("app");
-          const root = ReactDOM.createRoot(app);
-          root.render(<h1>Develop. Preview. share.</h1>)
+    <script type="text/jsx"></script>
+        const domNode = document.getElementById("app");
+          const root = ReactDOM.createRoot(domNode);
+          root.render(<h1>Develop. Preview. share.</h1>);
     </script>
   </body>
 </html>
