--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
         const domNode = document.getElementById("app");
 
         // Always capitalize the React Component
-         function Header(){
-            return (<h1>Develop. Preview. share.</h1>)
+         function Header({title}){
+           return <h1>{title ? title : 'Default title'}</h1>;
          }
 
          function Homepage(){
           return (
-
-            /* Nesting the header Component*/
-            <Header />
+             <div>
+               <Header title="React" />
+               <Header title="A new title" />
+             </div>
          );
        }
 
