--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
          }
 
          function Homepage(){
+           const names = [ 'cedrick feze', 'kobe bryan', 'lewis hamilton'];
           return (
              <div>
-               <Header title="React" />
-               <Header title="A new title" />
+               <Header title="beginReact" />
+               <ul>
+                 {names.map((name) => (
+                         <li key={name}>{name}</li>
+                   ))}
+               </ul>
              </div>
          );
        }
